--- a/frontend/src/app/components/sections/reservas/display/reservas-display.component.html
+++ b/frontend/src/app/components/sections/reservas/display/reservas-display.component.html
@@ -8,10 +8,10 @@
         <li app-data-item-display *ngFor="let data of dataPaquete" [icon]="data.icon" [title]="data.title" >
             {{data.value}}        
         </li>
-        <app-activities-list display-table type="reserva" [data]="item" >          
+       
+        <app-activities-list display-table type="reserva" [data]="item" mode="display">          
         </app-activities-list>      
     </app-card-display>
-    <br>   
     
     <footer>
         <div class="text-left">
