--- a/frontend/src/app/components/layout/canvas/canvas.component.scss
+++ b/frontend/src/app/components/layout/canvas/canvas.component.scss
@@ -80,20 +80,31 @@ aside.aside-hidden{
     
     width:300%;
 }
+.slider-inner.slides-4{
+    
+    width:400%;
+}
 
 /*** SIZES SLIDE  ***/
 
 .slides-3>.slide{
+
+    width:25%;
+}
+
+.slides-4>.slide{
 
     width:33.3333%;
 }
 
 /*** POSITION SLIDES  ***/
 
-.slides-3.slide1{  left:0; }
+.slide1 {  left:0; }
 
-.slides-3.slide1.slide2{  left:-100%; }
+.slide1.slide2{  left:-100%; }
 
-.slides-3.slide1.slide2.slide3{  left:-200%; }
+.slide1.slide2.slide3{  left:-200%; }
+
+.slide1.slide2.slide3.slide4{  left:-300%; }
 
 
