--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,5 @@
 
-// Custom Theming for Angular Material
+/* // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
@@ -33,7 +33,7 @@ $travelApp-theme: mat.define-light-theme((
 // that you are using.
 @include mat.all-component-themes($travelApp-theme);
 
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */ 
 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
@@ -44,6 +44,8 @@ $travelApp-theme: mat.define-light-theme((
 @import "../node_modules/bootstrap/scss/bootstrap"; 
 
 @import url('https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css'); // for step form
+
+@import "../node_modules/angular-calendar/css/angular-calendar.css"; // for calendar
 
 
 html{
@@ -71,5 +73,7 @@ body{
 
     font-size: 80%;
 }
+
+
 
 
