--- a/frontend/src/app/components/sections/salidas/salidas-section/salidas-section.component.html
+++ b/frontend/src/app/components/sections/salidas/salidas-section/salidas-section.component.html
@@ -10,7 +10,7 @@
                 <i class="bi bi-chevron-left me-2"></i> {{ data | show:'salida':'date_end' }} 
             </td>
             <td>                 
-                {{ data | show:'salida':'operator_name' }} <br>           
+                {{ data | show:'salida':'operators_list' }} <br>           
             </td>
             <td>                 
                 {{ data | show:'salida':'passengers_total_list' }} <br>           
