--- a/frontend/src/app/components/shared/form/input/input.component.html
+++ b/frontend/src/app/components/shared/form/input/input.component.html
@@ -7,11 +7,11 @@
 <!-- PLANTILLAS -->
 
 <ng-template let-name="name" let-value="value" let-title="title" #text>
-    <label>{{title}}</label><input type="text" class="form-control" [value]="value[0]" [name]="name[0]"  (input)="update($any($event.target).value);">
+    <label>{{title}}</label><input type="text" class="form-control" [value]="value[0] || null" [name]="name[0]"  (input)="update($any($event.target).value);">
 </ng-template>
 
 <ng-template let-name="name" let-value="value" let-title="title" #number>
-    <label>{{title}}</label><input type="number" class="form-control" [name]="name[0]" [value]="value[0]" (input)="update($any($event.target).value)">
+    <label>{{title}}</label><input type="number" class="form-control" [name]="name[0]" [value]="value[0] || null" (input)="update($any($event.target).value)">
 </ng-template>
 
 <ng-template let-name="name" let-value="value" let-title="title"   let-options="options"  #select>
