--- a/frontend/src/app/components/shared/form/input/input.component.html
+++ b/frontend/src/app/components/shared/form/input/input.component.html
@@ -45,7 +45,7 @@
     <app-passengers-list [value]="value[0]" [title]="title" (inputChange)="update($event)"></app-passengers-list>
 </ng-template>
 <ng-template let-name="name" let-value="value" let-title="title" let-options="options" #activitiesList>
-    <label>{{title}}</label>
+
     <app-activities-list-form-admin 
         [value]="value[0]" [title]="title" [title]="title" [activitiesGroupItem]="item" [type]="type" (inputChange)="update($event)">
     </app-activities-list-form-admin>
@@ -53,6 +53,9 @@
 <ng-template let-name="name" let-value="value" let-title="title" let-options="options" #activitiesList>
     <label>{{title}}</label>
     <app-rooms-list [value]="value[0]" (inputChange)="update($event)"></app-rooms-list>
+</ng-template>
+<ng-template let-name="name" let-value="value" let-title="title" let-options="options" #paxList>
+    <app-pax-list-form-admin [value]="value[0]" (inputChange)="update($event)"></app-pax-list-form-admin>
 </ng-template>
 
 
