--- a/frontend/src/app/components/shared/modal/modal.component.html
+++ b/frontend/src/app/components/shared/modal/modal.component.html
@@ -1,6 +1,6 @@
 <div class="p-5 text-center">
-    <div><i class="bi h3 {{icon}}"></i></div>
-    <h5 class="mb-4 text-center">{{message}}</h5>
+    <div><i class="bi h3 {{icon}} display-4"></i></div>
+    <h5 class="my-5 text-center">{{message}}</h5>
     <hr>
     <button class="btn btn-primary" (click)="back()">
         {{button }}
