--- a/frontend/src/app/components/sections/salidas/form/passengers/select-passenger/select-passenger.component.html
+++ b/frontend/src/app/components/sections/salidas/form/passengers/select-passenger/select-passenger.component.html
@@ -1,24 +1,42 @@
-<app-table [config]="tableConfig" (buttonClick)="form()">
 
-    <ng-template let-data="data" #passengers>
-        <tr (click)="display(data,false)" class="pointer">
-            <td> 
+<ng-container *ngIf="date_start && date_end && tourSalida else volverTemplate">
+
+    <app-table [config]="tableConfig" (buttonClick)="form()">
+
+        <ng-template let-data="data" #passengers>
+            <tr (click)="display(data,false)" class="pointer">
+                <td> 
+                    
+                    {{ data | show:'passenger':'full_name' }} <br>
+                    <small class="text-secondary">
+                        <i class="bi bi-people me-2"></i>{{ data | show:'passenger':'pax_list' }}</small> <br>               
                 
-                {{ data | show:'passenger':'full_name' }} <br>
-                <small class="text-secondary">
-                    <i class="bi bi-people me-2"></i>{{ data | show:'passenger':'pax_list' }}</small> <br>               
-            
-            </td>
-            <td> 
-                {{ $any(data | show:'passenger':'dates').programada ||   $any(data | show:'passenger':'dates').reserva }} 
-            </td>
-            <td>
-                <i class="bi bi-{{ (data | show:'passenger':'has_salida') ? 'check-circle-fill text-success':'exclamation-square-fill text-warning' }}" ></i>                 
-            </td>
-            <td>{{data | show:'reserva':'provider_name'}} </td>
-        </tr>
-    </ng-template>
+                </td>
+                <td> 
+                    {{ $any(data | show:'passenger':'dates').programada ||   $any(data | show:'passenger':'dates').reserva }} 
+                </td>
+                <td>
+                    <i class="bi bi-{{ (data | show:'passenger':'has_salida') ? 'check-circle-fill text-success':'exclamation-square-fill text-warning' }}" ></i>                 
+                </td>
+                <td>{{data | show:'reserva':'provider_name'}} </td>
+            </tr>
+        </ng-template>    
 
-   
+    </app-table>
 
-</app-table>
+</ng-container>
+
+<ng-template #volverTemplate>
+    <div class="text-center">
+        <h5>
+            <i class="bi bi-hexagon-exclamation me-2"></i> Antes determina una ficha de inicio y fin para el tour
+        </h5>
+        <hr>
+        <button class="btn btn-primary" (click)="display()">
+            Volver
+        </button>
+    </div>
+    
+    
+
+</ng-template>
