--- a/frontend/src/app/components/layout/header/header.component.html
+++ b/frontend/src/app/components/layout/header/header.component.html
@@ -6,6 +6,6 @@
         <h4 class="text-uppercase pe-3 m-0 fw-light">{{title}}</h4>
     </div>
     <div class="mt-0 mx-3">
-        <app-select-data-dates></app-select-data-dates>
+        <p class="m-0 p-0 nav-link pointer dropdown-toggle" (click)="open()"><small>Datos desde 22/03/22 a 22/05/22</small></p>
     </div>
 </div>
