--- a/frontend/src/app/components/layout/layout/layout.component.scss
+++ b/frontend/src/app/components/layout/layout/layout.component.scss
@@ -12,6 +12,32 @@ main{
 
 #app-menu{ width:100%; }
 
+.scene{
+
+    perspective: 1000px;
+    
+}
+
+.cube{
+
+    transform-style: preserve-3d;
+    position: relative;
+    transition: transform 1s;
+    transform: translateZ(-750px);
+}
+
+.cube.inLogin { transform: translateZ(-750px) rotateY( -90deg); }
+
+.cube-face{
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.face-front  { transform: rotateY(  0deg) translateZ(750px); }
+.face-right  { transform: rotateY( 90deg) translateZ(750px);  }  
+
 @media (min-width: 992px) { 
 
     #app-menu{ 
